--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -15,10 +15,10 @@
             <input type="radio" name="r" id="r3">
             <input type="radio" name="r" id="r4">
 
-            <div class="slide"><img src="" alt=""></div>
-            <div class="slide"><img src="" alt=""></div>
-            <div class="slide"><img src="" alt=""></div>
-            <div class="slide"><img src="" alt=""></div>
+            <div class="slide"><img src="../img/1.png" alt="gosling1"></div>
+            <div class="slide"><img src="../img/2.png" alt="gosling2"></div>
+            <div class="slide"><img src="../img/3.png" alt="gosling3"></div>
+            <div class="slide"><img src="../img/4.png" alt="gosling4"></div>
         </div>
         <div class="navigation">
             <label for="r1" class="bar"></label>
