--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="conteiner">
-        <div class="slider middle">
+        <div class="slider">
                     <input type="radio" name="r" id="r1" checked>
                     <input type="radio" name="r" id="r2">
                     <input type="radio" name="r" id="r3">
@@ -24,10 +24,10 @@
                     
                     <div class="aboba">
                         <div class="texts">
-                            <div class=" s1"><p>Морской</p></div>
-                            <div class=""><p>Грозный</p></div>
-                            <div class=""><p>Тёплый</p></div>
-                            <div class=""><p>Травенной</p></div>
+                            <div class="text s1"><p>Морской</p></div>
+                            <div class="text"><p>Грозный</p></div>
+                            <div class="text"><p>Тёплый</p></div>
+                            <div class="text"><p>Травенной</p></div>
                         </div>
                         <div class="navigation">
                             <label for="r1" class="bar"></label>
